static/scss/navbar.scss
.micromasters-navbar {
  padding-bottom: 0;

  .mobile-visible {
    @include breakpoint(desktop) {
      display: none;
    }
  }

  .desktop-visible {
    @include breakpoint(mobile) {
      display: none;
    }
  }

  .nav-drawer {
    position: fixed;
    z-index: 1000;
    width: 250px;
    height: 100%;
    left: -250px;
    background-color: white;
    transition: transform 0.5s;

    &.open {
      transform: translate(100%);
      box-shadow: 3px 0 10px rgba(0,0,0,.2);
    }

    .profile-info {
      background-color: $mm-brand-bg;
      display: flex;
      flex-direction: column;
      color: white;

      > * {
        padding-left: 20px;
      }

      .program-selector {
        padding-right: 15px;
        margin-top: 5px;

        .Select-menu-outer,.Select-control,.Select-value-label,.Select-placeholder,.Select-option {
          color: rgba(255,255,255,.7) !important;
        }

        .Select-placeholder {
          padding-left: 0;
        }

        .Select-control {
          border: none !important;
          box-shadow: none !important;
          cursor: pointer;
        }

        .Select-menu-outer {
          border: none;
        }

      }

      .name {
        font-weight: 400;
      }

      .program-selector:last-child, .name:last-child {
        padding-bottom: 10px;
      }

      .avatar {
        padding: 10px 20px;

        img {
          width: 70px;
          height: auto;
          border-radius: 50%;
        }
      }
    }

    .links {
      display: flex;
      flex-direction: column;
      border-bottom: thin solid $border-color;
    }

    .links, .logout-link {
      .link {
        display: flex;
        align-items: center;
        padding: 10px 0;

        a {
          color: $font-black;
          width: 100%;
        }

        i {
          color: $mm-brand-bg;
          padding: 0 23px 0 15px
        }
      }

      .link:first-child {
        padding-top: 25px;
      }

      .link:last-child {
        padding-bottom: 25px;
      }
    }

  }

  .micromasters-nav, .micromasters-nav > * {
    background-color: $mm-brand-bg !important;
  }

  .micromasters-nav {
    box-shadow: none !important;

    @include breakpoint(desktop) {
      min-height: 50px;
    }

    @include breakpoint(mobile) {
      min-height: 0;
    }

    a.micromasters-title {
      text-decoration: none;
      color: white;
    }

    .micromasters-title {
      display: flex;
      flex-direction: row;
      align-items: center;

      span.mdl-layout-title {
        font-size: 17px;
        font-weight: 200;

        &.profile-header {
          color: white;
          text-decoration: none;
          font-weight: 300;
        }
      }

      @include breakpoint(desktop) {
        img {
          height: 27px;
          margin-right: 25px;
        }
      }

      @include breakpoint(mobile) {
        img {
          height: 27px;
          margin-right: 15px;
        }

        i.material-icons {
          font-size: 30px;
          padding-right: 15px;
        }
      }
    }

    .micromasters-header {
      justify-content: space-between;
      height: 60px;

      @include breakpoint(desktop) {
        padding: 0 40px 0 40px;
      }

      @include breakpoint(mobile) {
        padding: 0 0 0 15px;
        height: 65px;
      }
    }
  }
}

.navbar {
  min-height:80px;
  margin-bottom:0;
}

.navbar-brand {
  padding: 22px 20px;
}

.navbar-header {
  width:100%;
  padding:0 15px;
}

.navbar-toolbar > li > a {
  padding:27px 14px;
  line-height: 34px;
  color: #337ab7;
  font-weight: normal;
  text-decoration: none;
}

.navbar .nav.navbar-left {
  margin-left:60px;
}

.nav-utility {
  margin-top:20px;
  color:#000;
}

.nav-utility span {
  display: inline-block;
  margin-right:10px;
}

.program-selector {
  font-size: 15px;

  @include breakpoint(desktop) {
    margin-left: 30px;
    padding-right: 30px;
    padding-left: 10px;
    width: 300px;
  }

  .Select-control {
    border: 1px solid $program_selector_border !important;
    box-shadow: none !important;
    cursor: pointer;
  }

  .Select-menu-outer,.Select-control,.Select-value-label,.Select-menu-outer,.Select-option {
    background-color: $mm-brand-bg !important;
  }

  .Select-menu-outer,.Select-control,.Select-value-label,.Select-placeholder,.Select-option {
    color: $header_font_color !important;
  }

  .Select-arrow {
    border-color: $header_font_color transparent transparent !important;
  }

  .Select-option {
    border: none !important;
  }

  .Select-menu-outer {
    box-shadow: none;
    border-top: none;
    border-left: 1px solid $program_selector_border;
    border-right: 1px solid $program_selector_border;
    border-bottom: 1px solid $program_selector_border;
    z-index: 2;
  }

  .Select-placeholder {
    font-weight: 300;
  }
}

.site-menu {
  border-bottom:1px solid #ececec;
}

.navbar-collapse .btn {
  margin: 26px 0 0 0;
  float:right;
}

.mdl-layout-title > a {
  color: white;
  text-decoration: none;
  font-weight: 300;
}

.mdl-layout-title > a:hover, .mdl-layout-title > a:focus {
  color: white;
}

